<resources>
    <string name="app_name">E-Invesment DPMTSP Tulungagung</string>
    <string name="home">Home</string>
    <string name="list">List</string>
    <string name="search">Search</string>
    <string name="help">Help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expanded_image_content_description">Expanded Image</string>
    <string name="highlight_project_prospect">Highlight Project Prospect</string>
    <string name="lihat_semua"><![CDATA[Lihat Semua >]]></string>
    <string name="highlight_sektor">Highlight Sektor</string>
    <string name="event">Events</string>
    <string name="google_maps_key">AIzaSyBo7Nxyi8eNbLo96_kd-_eP9-kCvNwpV58</string>
    <string name="data_realisasi_oss">Data Realisasi Investasi Kabupaten Tulungagung</string>
    <string name="detail_prospect">Detail Prospect</string>
    <string name="peluang_investasi">Peluang Investasi</string>
    <string name="i_ipro">I-IPRO</string>
    <string name="tentang_lahan">Tentang Lahan</string>
    <string name="analisa_investasi">Analisa Investasi</string>
    <string name="kapasitas_produksi">Kapasitas Produksi</string>
    <string name="aspek_teknis_pendukung">Aspek Teknis Pendukung</string>
    <string name="detail_i_ipro">Detail I-IPRO</string>
    <string name="detail_lahan">Detail Lahan</string>
    <string name="detail_peluang">Detail Peluang</string>
</resources>
