<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_menu"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp"/>

    <item
        android:id="@+id/list_menu"
        android:title="@string/list"
        android:icon="@drawable/ic_list_black_24dp"/>

    <item
        android:id="@+id/search_menu"
        android:title="@string/search"
        android:icon="@drawable/ic_search_black_24dp"/>

    <item
        android:id="@+id/realisasi_menu"
        android:title="Realisasi"
        android:icon="@drawable/ic_description_black_24dp"/>

    <item
        android:id="@+id/help_menu"
        android:title="About Us"
        android:icon="@drawable/ic_help_black_24dp"/>


</menu>