<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/fragment_fragment_1">

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_highliht1"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:text="@string/highlight_project_prospect"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_highliht2"
            android:layout_alignParentRight="true"
            android:textStyle="bold"
            android:text="@string/lihat_semua"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_highliht1"
            android:layout_marginTop="10dp"
            android:nestedScrollingEnabled="false"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_highliht3"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/recycler_view"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/highlight_sektor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_highliht4"
            android:layout_below="@id/recycler_view"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/lihat_semua"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_highliht3"
            android:layout_marginTop="10dp"
            android:nestedScrollingEnabled="false"
            />
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>
