<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">

            <ImageView
                android:id="@+id/img_expanded"
                android:layout_width="match_parent"
                android:layout_height="@dimen/expanded_toolbar_height"
                android:src="@drawable/header"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                android:contentDescription="@string/expanded_image_content_description"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_bppt"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"

                >

            </androidx.appcompat.widget.Toolbar>



        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/nested_scroll"
        android:fillViewport="true">


        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorLightBlue"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:id="@+id/relative_cardview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sektor"
                        android:id="@+id/txt_sektor"
                        android:textColor="@color/colorWhite">
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="More >"
                        android:textColor="@color/colorWhite"
                        android:layout_alignParentRight="true">
                    </TextView>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_below="@id/txt_sektor"
                        android:id="@+id/recyeview_sektor"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </androidx.recyclerview.widget.RecyclerView>

                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_highliht1"
                android:layout_below="@id/cardview"
                android:layout_alignParentLeft="true"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorLightBlue"
                android:text="@string/highlight_project_prospect"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_highliht2"
                android:layout_alignParentRight="true"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/cardview"
                android:textColor="@color/colorLightBlue"
                android:text="@string/lihat_semua"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_highliht1"
                android:layout_marginTop="10dp"
                android:nestedScrollingEnabled="false"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_highliht3"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/recycler_view"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorLightBlue"
                android:textStyle="bold"
                android:text="@string/highlight_sektor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_highliht4"
                android:layout_below="@id/recycler_view"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/colorLightBlue"
                android:text="@string/lihat_semua"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_highliht3"
                android:layout_marginTop="10dp"
                android:nestedScrollingEnabled="false"
                />

        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>