<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/img_expanded"
                android:layout_width="match_parent"
                android:layout_height="@dimen/expanded_toolbar_height"
                android:contentDescription="@string/expanded_image_content_description"
                android:scaleType="fitXY"
                android:src="@drawable/header"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_bppt"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"

                >

            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg">

            <RelativeLayout
                android:id="@+id/rl_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:padding="10dp">


                <RelativeLayout
                    android:id="@+id/relative_cardview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/txt_sektor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="Sektor"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"></TextView>

                    <TextView
                        android:id="@+id/txt_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:padding="10dp"
                        android:text="More >"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"></TextView>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyeview_sektor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_sektor"
                        android:layout_marginTop="5dp">

                    </androidx.recyclerview.widget.RecyclerView>

                </RelativeLayout>


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_menu"
                android:layout_marginTop="8dp"
                android:background="@color/colorWhite"
                android:padding="10dp">


                <TextView
                    android:id="@+id/txt_highliht1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:padding="10dp"
                    android:text="@string/highlight_project_prospect"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />


                <!--                <TextView-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:id="@+id/txt_highliht2"-->
                <!--                    android:layout_alignParentRight="true"-->
                <!--                    android:textStyle="bold"-->
                <!--                    android:padding="10dp"-->
                <!--                    android:textSize="12dp"-->
                <!--                    android:textColor="@color/colorLightBlue"-->
                <!--                    android:text="@string/lihat_semua"/>-->

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_highliht1"
                    android:nestedScrollingEnabled="false" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_2"
                android:layout_marginTop="8dp"
                android:background="@color/colorWhite"
                android:padding="10dp">


                <TextView
                    android:id="@+id/txt_highliht5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:padding="10dp"
                    android:text="@string/peluang_investasi"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/txt_more1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="10dp"
                    android:text="More >"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_highliht5"
                    android:nestedScrollingEnabled="false" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_5"
                android:layout_marginTop="8dp"
                android:background="@color/colorWhite"
                android:padding="10dp">


                <TextView
                    android:id="@+id/txt_highliht6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:padding="10dp"
                    android:text="@string/i_ipro"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/txt_more2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="10dp"
                    android:text="More >"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_highliht6"
                    android:nestedScrollingEnabled="false" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_6"
                android:layout_marginTop="8dp"
                android:background="@color/colorWhite"
                android:padding="10dp">


                <TextView
                    android:id="@+id/txt_highliht7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:padding="10dp"
                    android:text="@string/tentang_lahan"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/txt_more3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="10dp"
                    android:text="More >"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_highliht7"
                    android:nestedScrollingEnabled="false" />

            </RelativeLayout>


            <!--            <RelativeLayout-->
            <!--                android:id="@+id/rl_3"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:background="@color/colorWhite"-->
            <!--                android:padding="10dp"-->
            <!--                android:layout_marginTop="8dp"-->
            <!--                android:layout_below="@+id/rl_2">-->

            <!--                <TextView-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:id="@+id/txt_highliht3"-->
            <!--                    android:layout_alignParentLeft="true"-->
            <!--                    android:padding="10dp"-->
            <!--                    android:textColor="@color/colorBlack"-->
            <!--                    android:textStyle="bold"-->
            <!--                    android:text="@string/highlight_sektor"/>-->

            <!--                <ImageView-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:src="@drawable/ic_more_vert_black_24dp"-->
            <!--                    android:layout_alignParentRight="true"-->
            <!--                    android:padding="10dp"/>-->

            <!--                <TextView-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:id="@+id/txt_highliht4"-->
            <!--                    android:layout_alignParentRight="true"-->
            <!--                    android:layout_marginTop="10dp"-->
            <!--                    android:textStyle="bold"-->
            <!--                    android:textColor="@color/colorLightBlue"-->
            <!--                    android:text="@string/lihat_semua"/>-->

            <!--                <androidx.recyclerview.widget.RecyclerView-->
            <!--                    android:id="@+id/recycler_view2"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_below="@id/txt_highliht3"-->
            <!--                    android:nestedScrollingEnabled="false"-->
            <!--                    />-->

            <!--            </RelativeLayout>-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_7"
                android:layout_marginTop="8dp"
                android:background="@color/colorWhite"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txt_highliht4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:padding="10dp"
                    android:text="@string/data_realisasi_oss"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />


                <!--                <TextView-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:id="@+id/txt_highliht4"-->
                <!--                    android:layout_alignParentRight="true"-->
                <!--                    android:layout_marginTop="10dp"-->
                <!--                    android:textStyle="bold"-->
                <!--                    android:textColor="@color/colorLightBlue"-->
                <!--                    android:text="@string/lihat_semua"/>-->

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_highliht4"
                    android:nestedScrollingEnabled="false" />

            </RelativeLayout>

        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>